# basiliskos

./: .gitignore  AGENTS.md  CLEAN_ROOM_SPEC.md  LICENSE  PLAN.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-gate.yml
docs/: OPENCODEX-SCAFFOLD.md  RELEASE-CHECKLIST.md
docs/social/: card-feature.html  card-hero.html  card-square.html
scripts/: check-command-surface.ps1  check-installer-contract.ps1  check-runtime-log-secrets.ps1  check-sensitive-data.ps1  generate-release-evidence.ps1  prepare-gateway.ps1  sign-command.ps1  tauri-build.ps1  test-gateway.ps1  test-installer-lifecycle.ps1
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_cli.rs  codex_switcher_import.rs  diagnostics.rs  gateway.rs  grok_cli.rs  lib.rs  main.rs  persistence.rs  test_support.rs
src-tauri/windows/: INSTALL-PATH.md  installer-hooks.nsh
