[package]
name = "hydra-gateway"
version = "2.0.2"
description = "Local backend and account controller for Claude Code Desktop"
authors = ["Charles 3Ready"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hydra_gateway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "=2.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
dirs = "6"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
url = "2"
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "net"] }
tiny_http = "0.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }
